update css styling for buttons to add dark and light theme

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,15 @@
 }
 
 .day-background {
-
   color: blue;
   background-color: yellow;
+}
+
+.night-background {
+  color: white;
+  background-color: #6d6d6d;
+}
+
+.container {
+  text-align: center;
 }
